Fix white space in some component

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -28,7 +28,7 @@
   .github {
     display: flex;
     flex-flow: row nowrap;
-    margin: auto 0;
+    margin: auto 2rem;
     gap: .5rem;
     position: relative;
     color: white;
