--- a/src/app/pages/pokemon-intro-page/pokemon-intro-page.component.scss
+++ b/src/app/pages/pokemon-intro-page/pokemon-intro-page.component.scss
@@ -30,18 +30,14 @@
       font-size: 11.5rem;
       font-family: "Josefin Sans", sans-serif !important;
       color: rgb(255, 255, 255);
-  
-  
       margin-bottom: 4rem;
-  
     }
-
 
     .search{
       margin: 0 auto;
     }
     
-    .random-button{
+    button{
       margin: 0 auto;
       padding: 10px 20px;
       width: 15rem;
@@ -54,19 +50,13 @@
       border: 2px solid rgb(0, 0, 0);
       line-height: 1.4rem;
       letter-spacing: 1px;
-      
-      
-    }
-    
-    .random-button:hover {
-      background-color: white;
-      color: black;
-      
-      filter: drop-shadow(0 0 5px black);
-      
       cursor: pointer;
     }
     
-    
+    button:hover {
+      background-color: white;
+      color: black;
+      filter: drop-shadow(0 0 5px black);
+    }
   }
 }
